<resources>
    <!-- Common -->
    <string name="app_name">HEH Inventory</string>
    <string name="logo_description">Logo de la Haute-Ecole en Hainaut</string>

    <!-- Database permissions -->
    <string name="database_permission_read">Basic</string>
    <string name="database_permission_read_write">Administrateur</string>

    <!-- Form Login-->
    <string name="form_hint_mail">Adresse email</string>
    <string name="form_hint_password">Mot de passe</string>
    <string name="form_login_button">Connexion</string>
    <string name="form_register_button">Inscription</string>

    <!-- Form Add Device -->
    <string name="form_add_device_title">Ajouter un appareil</string>
    <string name="form_hint_reference">Référence</string>
    <string name="form_hint_family">Téléphone/Tablette</string>
    <string name="form_hint_brand">Marque</string>
    <string name="form_hint_name">Modèle</string>
    <string name="form_hint_website">Site web</string>
    <string name="form_add_device_button">Ajouter l\'appareil</string>

    <!-- Delete Device -->
    <string name="form_delete_device_button">Supprimer l\'appareil</string>

    <!-- Icons alternate text -->
    <string name="icon_add_device">Ajouter un appareil</string>
    <string name="icon_scan_qr">Scanner un code QR</string>

    <!-- ErrorCode -->
    <string name="error_ok">OK</string>
    <string name="error_mail_format">L\'adresse mail n\'est pas valide.</string>
    <string name="error_password_format">Le mot de passe n\'est pas valide.</string>
    <string name="error_user_not_found">L\'adresse mail ou le mot de passe est incorrect.</string>
    <string name="error_user_already_exists">L\'utilisateur existe déjà.</string>
    <string name="error_reference_format">La référence n\'est pas valide.</string>
    <string name="error_brand_format">La marque n\'est pas valide.</string>
    <string name="error_name_format">Le nom n\'est pas valide.</string>
    <string name="error_website_format">Le site web n\'est pas valide.</string>
    <string name="error_reference_already_exists">La référence existe déjà.</string>

    <!-- Nav -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Ouvrir menu de navigation</string>
    <string name="navigation_drawer_close">Fermer menu de navigation</string>
    <string name="nav_header_title">HEH Inventory</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Header de navigation</string>
    <string name="action_settings">Paramètres</string>
    <string name="menu_qr">Scanner</string>
    <string name="menu_devices_list">Appareils</string>
    <string name="menu_device_add">Ajouter un appareil</string>
    <string name="menu_users">Utilisateurs</string>

    <!-- Confirmation popup -->
    <string name="popup_confirm">Oui</string>
    <string name="popup_cancel">Annuler</string>
    <string name="popup_neutral">OK</string>
    <string name="popup_device_add_title">Ajouter un appareil</string>
    <string name="popup_device_change_status_title">Modifier le statut d\'un appareil</string>
    <string name="popup_device_add_message">Cet appareil n\'existe pas, souhaitez-vous l\'ajouter ?</string>
    <string name="popup_device_change_status_message">Souhaitez-vous marquer l\'appareil %s comme étant "%s" ?</string>
    <string name="popup_device_show_title">Appareil %s</string>
    <string name="popup_device_show_message">Cet appareil est actuellement %s.</string>
    <string name="popup_device_see_details">Voir les détails</string>
    <string name="popup_qr_not_recognized_message">Ce code QR n\'est pas enregistré.</string>
    <string name="popup_qr_not_recognized_title">Code QR non enregistré</string>
    <string name="popup_device_delete_title">Supprimer l\'appareil</string>
    <string name="popup_device_delete_message">Voulez-vous vraiment supprimer l\'appareil %s ?</string>

    <!-- Other Toast notifications -->
    <string name="toast_confirm_added_device">L\'appareil %s a bien été ajouté</string>
    <string name="toast_confirm_delete_device">L\'appareil %s a bien été supprimé</string>

    <!-- DeviceActions -->
    <string name="device_action_give">Prêté</string>
    <string name="device_action_take_back">Disponible</string>
    <string name="toast_confirm_status_device">Le statut de l\'appareil a bien été modifié</string>

</resources>