<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="be.heh.heh_inventory.ui.home.HomeFragment"
        android:label="@string/menu_qr"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_devices_list"
        android:name="be.heh.heh_inventory.ui.devicesList.DevicesListFragment"
        android:label="@string/menu_devices_list"
        tools:layout="@layout/fragment_devices_list" />

    <fragment
        android:id="@+id/nav_device_add"
        android:name="be.heh.heh_inventory.ui.deviceAdd.DeviceAddFragment"
        android:label="@string/menu_device_add"
        tools:layout="@layout/fragment_device_add">
        <argument
            android:name="ref"
            app:argType="string"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="be.heh.heh_inventory.ui.deviceAdd.DeviceAddFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_device_add" />
</navigation>