<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_device_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_secondary"
    android:orientation="vertical"
    android:paddingLeft="@dimen/form_padding"
    android:paddingRight="@dimen/form_padding"
    tools:context=".ui.deviceAdd.DeviceAddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/form_padding"
        android:paddingRight="@dimen/form_padding">

        <!-- Reference input -->

        <TextView
            android:id="@+id/reference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/form_add_device_title"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_login_spacing" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_reference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_reference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/form_background"
                android:hint="@string/form_hint_reference" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Space -->

        <!-- Family Spinner -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_login_spacing" />

        <Spinner
            android:id="@+id/spinner_family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="multiply"
            android:contentDescription="@string/form_hint_family"
            android:spinnerMode="dropdown" />

        <!-- Space -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_login_spacing" />

        <!-- Brand input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/form_background"
                android:hint="@string/form_hint_brand" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Space -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_login_spacing" />

        <!-- Name input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/form_background"
                android:hint="@string/form_hint_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Space -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_login_spacing" />

        <!-- Space -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/form_background"
                android:hint="@string/form_hint_website" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Space -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_login_spacing" />

        <!-- Add Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_device_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_add_device_button"
            app:backgroundTint="@color/theme_primary"></com.google.android.material.button.MaterialButton>
    </LinearLayout>
</LinearLayout>