<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.MaterialComponents.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_secondary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="be.heh.heh_inventory.LoginActivity">

    <!-- Form -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/logo_heh" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <!-- Email input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_hint_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/form_background"
                android:textColorHint="@color/form_hint_grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Space -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_login_spacing" />

        <!-- Password input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_hint_password">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/form_background"
                android:textColorHint="@color/form_hint_grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Space -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_login_spacing" />

        <!-- Login button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_login_button"
            app:backgroundTint="@color/theme_primary"></com.google.android.material.button.MaterialButton>
    </LinearLayout>
</LinearLayout>
